--- a/src/components/sidebar/sidebar.scss
+++ b/src/components/sidebar/sidebar.scss
@@ -12,7 +12,7 @@
         left: 0;
         bottom: 0;
         width: 400px;
-        background-color: white;
+        background-color: #fff;
 
         .links{
             position: absolute;
