Hero section Update

--- a/src/App.scss
+++ b/src/App.scss
@@ -11,8 +11,9 @@ html{
 }
 
 body{
-    background-color: #0c0c1d;
-    color: lightgray;
+    // background-color: #0c0c1d;
+    background: #081b29;
+    color: #fff;
 }
 
 section{
