--- a/src/components/navbar/navbar.scss
+++ b/src/components/navbar/navbar.scss
@@ -1,32 +1,4 @@
-.navbar {
-  height: 100px;
-
-  .wrapper {
-    max-width: 1366px;
-    margin: auto;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    height: 100%;
-
-    span{
-        font-weight: bold;
-    }
-
-    .social{
-        display: flex;
-        gap: 20px;
-
-        img{
-            width: 20px;
-            height: 20px;
-        }
-
-        .github{
-         width: 22px;
-         height: 22px;
-         border-radius: 50%;
-        }
-    }
-  }
+.navbar{
+  position: absolute;
+  z-index: 1;
 }
