--- a/src/components/sidebar/sidebar.scss
+++ b/src/components/sidebar/sidebar.scss
@@ -3,8 +3,6 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    background-color: white;
-    color: black;
 
     .bg{
         position: fixed;
@@ -12,7 +10,7 @@
         left: 0;
         bottom: 0;
         width: 400px;
-        background-color: #fff;
+        background-color: #ffd000;
 
         .links{
             position: absolute;
@@ -28,7 +26,8 @@
             a{
                 font-size: 30px;
                 text-decoration: none;
-                color: black;
+                color: rgb(51, 51, 51);
+                font-weight: 800
             }
         }
     }
