--- a/src/components/hero/hero.scss
+++ b/src/components/hero/hero.scss
@@ -1,9 +1,9 @@
 .hero{
-    height: calc(100vh - 100px);
-    background: linear-gradient(180deg, #0c0c1d, #111132);
+    height: 100vh;
+    // background: linear-gradient(180deg, #0c0c1d, #111132);
+    background: #081b29;
     overflow: hidden;
     position: relative;
-    z-index: -1;
 
     .wrapper{
         max-width: 1366px;
@@ -22,13 +22,39 @@
             h1{
                 font-size: 60px;
                 letter-spacing: 3px;
+
+                .name{
+                    color: #ffd104;
+                }
             }
 
             h2{
                 font-size: 40px;
                 letter-spacing: 3px;
+                
             }
+
+            .buttons{
+                display: flex;
+                gap: 30px;
+                z-index: 1;
+                margin-top: 40px;
+        
+        
+                .button{
+                    border: 1px solid #ffd104;
+                    border-radius: 8px;
+                    width: 250px;
+                    text-align: center;
+                    padding: 10px;
+                    text-decoration: none;
+                    color: #ffd104;
+                    font-size: 20px;
+                }
+            }
+
         }
+
     }
 
     .slideTextContainer{
@@ -41,16 +67,15 @@
         font-weight: bold;
     }
 
-
     .imageContainer{
         height: 100%;
         position: absolute;
-        top: 0;
+        top: 120px;
         right: 100px;
 
 
         img{
-            height: 90%;
+            height: 80%;
         }
     }
 }
