hero section added

--- a/src/components/hero/hero.scss
+++ b/src/components/hero/hero.scss
@@ -51,6 +51,11 @@
                     color: #ffd104;
                     font-size: 20px;
                 }
+
+                .button:hover{
+                    border: 1px solid #fff;
+                    color: #fff;
+                }
             }
 
         }
