[In Progress] about page designed

--- a/src/App.scss
+++ b/src/App.scss
@@ -12,12 +12,12 @@ html{
 
 body{
     // background-color: #0c0c1d;
-    background: #081b29;
+    background: #0c283f;;
     color: #fff;
 }
 
 section{
-    height: 100vh;
+    min-height: 100vh;
     scroll-snap-align: center;
 }
 
