--- a/src/components/hero/hero.scss
+++ b/src/components/hero/hero.scss
@@ -1,7 +1,7 @@
 .hero{
     height: 100vh;
     // background: linear-gradient(180deg, #0c0c1d, #111132);
-    background: #081b29;
+    background: #0c283f;
     overflow: hidden;
     position: relative;
 
