[In progress] hero section update

--- a/src/components/hero/hero.scss
+++ b/src/components/hero/hero.scss
@@ -75,12 +75,32 @@
     .imageContainer{
         height: 100%;
         position: absolute;
-        top: 120px;
+        top: 0;
         right: 100px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        
 
 
         img{
-            height: 80%;
+            height: 700px;
+            width: 500px;
+            box-shadow: 0 0 0 9px rgba(255, 255, 255, 0.2);
+            order: 1;
+            animation: profile_animate 8s ease-in-out infinite 1s;
+        }
+
+        @keyframes profile_animate{
+            0%{
+                border-radius: 50% 40% 90% 50%/40% 40% 40% 40%;
+            }
+            50%{
+                border-radius: 80% 70% 70% 80%/50% 70% 80% 80%;
+            }
+            100%{
+                border-radius: 50% 40% 90% 50%/40% 40% 40% 40%;
+            }
         }
     }
 }
