--- a/src/components/about/about.scss
+++ b/src/components/about/about.scss
@@ -6,5 +6,62 @@
     min-height: 100vh;
     background: #153f5c;
 
+
+    .box{
+        width: 80%;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+
+        .header{
+            font-size: 50px;
+            font-weight: 600;
+            margin-bottom: 50px;
+
+            span{
+                color: #ffd104
+            }
+        }
+
+        img{
+            width:150px;
+            margin-bottom: 50px;
+             box-shadow: 0 0 0 3px rgba(255, 255, 255, 0.1);
+            animation: profile_animate 10s ease-in-out infinite 1s;
+        }
+
+        @keyframes profile_animate{
+            0%{
+                border-radius: 90% 90% 90% 90%/20% 20% 20% 20%;
+            }
+          
+            25%{
+                border-radius: 50% 50% 50% 50%/50% 50% 50% 50%;
+            }
+
+            50%{
+                border-radius: 20% 20% 20% 20%/20% 20% 20% 20%;
+            }
+
+            75%{
+                border-radius: 70% 20% 70% 20%/50% 50% 50% 50%;
+            }
+
+            100%{
+                border-radius: 90% 90% 90% 90%/20% 20% 20% 20%;
+            }
+        }
+
+        h1{
+            margin-bottom: 20px;
+            font-size: 30px;
+        }
+
+        p{
+            color: #fff;
+            text-align: center;
+        }
+    }
     
 }
