--- a/src/components/hero/hero.scss
+++ b/src/components/hero/hero.scss
@@ -85,22 +85,32 @@
 
         img{
             height: 700px;
-            width: 500px;
-            box-shadow: 0 0 0 9px rgba(255, 255, 255, 0.2);
-            order: 1;
-            animation: profile_animate 8s ease-in-out infinite 1s;
+            width: 450px;
+            // box-shadow: 0 0 0 8px rgba(255, 255, 255, 0.1);
+            // order: 1;
+            // animation: profile_animate 15s ease-in-out infinite 1s;
         }
 
-        @keyframes profile_animate{
-            0%{
-                border-radius: 50% 40% 90% 50%/40% 40% 40% 40%;
-            }
-            50%{
-                border-radius: 80% 70% 70% 80%/50% 70% 80% 80%;
-            }
-            100%{
-                border-radius: 50% 40% 90% 50%/40% 40% 40% 40%;
-            }
-        }
+        // @keyframes profile_animate{
+        //     0%{
+        //         border-radius: 40% 80% 50% 80%/40% 80% 50% 80%;
+        //     }
+          
+        //     25%{
+        //         border-radius: 50% 40% 70% 20%/50% 40% 50% 20%;
+        //     }
+
+        //     50%{
+        //         border-radius: 40% 50% 90% 30%/40% 80% 40% 80%;
+        //     }
+
+        //     75%{
+        //         border-radius: 50% 70% 30% 60%/50% 40% 80% 50%;
+        //     }
+
+        //     100%{
+        //         border-radius: 40% 80% 50% 80%/40% 80% 50% 80%;
+        //     }
+        // }
     }
 }
