Hero section update [image remove]

--- a/src/components/about/about.scss
+++ b/src/components/about/about.scss
@@ -4,7 +4,7 @@
     justify-content: center;
     align-items: center;
     min-height: 100vh;
-    background: #153f5c;
+    background: linear-gradient(#122E43, #07131C);
 
 
     .box{
@@ -59,9 +59,12 @@
         }
 
         p{
-            color: #fff;
+            color: #c2c1c1;
             text-align: center;
         }
     }
     
 }
+
+
+
