--- a/src/components/hero/hero.scss
+++ b/src/components/hero/hero.scss
@@ -1,7 +1,7 @@
 .hero{
     height: 100vh;
     // background: linear-gradient(180deg, #0c0c1d, #111132);
-    background: #0c283f;
+    background: #081B29;
     overflow: hidden;
     position: relative;
 
@@ -9,6 +9,11 @@
         max-width: 1366px;
         height: 100%;
         margin: auto;
+
+        
+        display: flex;
+        justify-content: center;
+        align-items: center;
 
 
         .textContainer{
@@ -36,6 +41,8 @@
 
             .buttons{
                 display: flex;
+                justify-content: center;
+                align-items: center;
                 gap: 30px;
                 z-index: 1;
                 margin-top: 40px;
