--- a/src/components/about/about.scss
+++ b/src/components/about/about.scss
@@ -15,7 +15,7 @@
         align-items: center;
 
         .header{
-            font-size: 50px;
+            font-size: 60px;
             font-weight: 600;
             margin-bottom: 50px;
 
@@ -25,7 +25,7 @@
         }
 
         img{
-            width:150px;
+            width:200px;
             margin-bottom: 50px;
              box-shadow: 0 0 0 3px rgba(255, 255, 255, 0.1);
             animation: profile_animate 10s ease-in-out infinite 1s;
@@ -55,12 +55,13 @@
 
         h1{
             margin-bottom: 20px;
-            font-size: 30px;
+            font-size: 40px;
         }
 
         p{
-            color: #c2c1c1;
+            color: gray;
             text-align: center;
+            font-size: 20px;
         }
     }
     
