contact page created

--- a/src/components/hero/hero.scss
+++ b/src/components/hero/hero.scss
@@ -36,7 +36,7 @@
             h2{
                 font-size: 40px;
                 letter-spacing: 3px;
-                
+                text-align: center;
             }
 
             .buttons{
