--- a/src/components/contact/contact.scss
+++ b/src/components/contact/contact.scss
@@ -1,6 +1,67 @@
-.contact{
+.contact {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  min-height: 100vh;
+  max-width: 1366px;
+  gap: 50px;
+  margin: auto;
+
+  .textContainer {
+    flex: 1;
     display: flex;
-    justify-content: center;
-    align-items: center;
-    min-height: 100vh;
+    flex-direction: column;
+    gap: 40px;
+
+    h1 {
+      font-size: 70px;
+      line-height: 80px;
+    }
+
+    span {
+      font-weight: 300;
+    }
+  }
+
+  .formContainer {
+    flex: 1;
+    position: relative;
+
+
+    .phoneSvg{
+        stroke: #ffd104;
+        position: absolute;
+        margin: auto;
+    }
+
+    form {
+      display: flex;
+      flex-direction: column;
+      gap: 20px;
+
+      input, textarea {
+        padding: 20px;
+        background-color: transparent;
+        border: 1px solid #fff;
+        color: #fff;
+        border-radius: 5px;
+      }
+
+      button{
+        padding: 15px;
+        border: 1px solid #ffd104;
+        color: #ffd104;
+        background: transparent;
+        font-size: 18px;
+        font-weight: 500;
+        cursor: pointer;
+        border-radius: 5px;
+      }
+
+      button:hover{
+        border: 1px solid #fff;
+        color: #fff;
+      }
+    }
+  }
 }
