mobile responsive designed

--- a/src/App.scss
+++ b/src/App.scss
@@ -25,3 +25,28 @@ section{
     text-decoration: none;
     color: inherit
 }
+
+
+@mixin small-mobile{
+    @media (max-width: 568px){
+        @content;
+    }
+}
+
+@mixin mobile{
+    @media (max-width: 768px){
+        @content;
+    }
+}
+
+@mixin tablet{
+    @media (max-width: 1024px){
+        @content;
+    }
+}
+
+@mixin desktop{
+    @media (max-width: 1366px){
+        @content;
+    }
+}
