--- a/src/components/cursor/cursor.scss
+++ b/src/components/cursor/cursor.scss
@@ -1,3 +1,6 @@
+@import "../../App.scss";
+
+
 .cursor{
     width: 30px;
     height: 30px;
@@ -5,4 +8,9 @@
     border: 1px solid #fff;
     position: fixed;
     z-index: 999;
+
+
+    @include mobile{
+        display: none;
+    }
 }
