--- a/src/components/contact/contact.scss
+++ b/src/components/contact/contact.scss
@@ -1,3 +1,6 @@
+@import "../../App.scss";
+
+
 .contact {
   display: flex;
   justify-content: center;
@@ -6,6 +9,14 @@
   max-width: 1366px;
   gap: 50px;
   margin: auto;
+  padding: 50px;
+
+
+  @include mobile{
+    flex-direction: column;
+    text-align: center;
+    
+  }
 
   .textContainer {
     flex: 1;
@@ -16,6 +27,15 @@
     h1 {
       font-size: 70px;
       line-height: 80px;
+
+      @include tablet{
+        font-size: 50px;
+      }
+
+      @include mobile{
+        font-size: 40px;
+      }
+
     }
 
     span {
@@ -26,13 +46,40 @@
   .formContainer {
     flex: 1;
     position: relative;
+    width: 90%;
+ 
+
+    @include small-mobile{
+      width: 100%;
+    }
+    
 
 
     .phoneSvg{
         stroke: #ffd104;
         position: absolute;
-        margin: auto;
+        margin: 0 auto;
         z-index: -1;
+        text-align: center;
+        width: 100%;
+
+
+        svg{
+          height: 450px;
+          width: 450px;
+
+
+          @include tablet{
+            height: 350px;
+            width: 350px;
+            margin-top: 50px;
+          }
+          @include mobile{
+            height: 300px;
+            width: 300px;
+          }
+
+        }
     }
 
     form {
