--- a/src/components/hero/hero.scss
+++ b/src/components/hero/hero.scss
@@ -1,9 +1,13 @@
+@import "../../App.scss";
+
+
 .hero{
     height: 100vh;
     // background: linear-gradient(180deg, #0c0c1d, #111132);
     background: #081B29;
     overflow: hidden;
     position: relative;
+   
 
     .wrapper{
         max-width: 1366px;
@@ -17,16 +21,29 @@
 
 
         .textContainer{
+            width: 60%;
+            text-align: center;
             height: 100%;
             display: flex;
             flex-direction: column;
             justify-content: center;
+            
+
+
+            @include mobile{
+                height: 50%;
+                width: 100%;
+            }
            
 
 
             h1{
                 font-size: 60px;
                 letter-spacing: 3px;
+
+                @include mobile{
+                    font-size: 40px;
+                }
 
                 .name{
                     color: #ffd104;
@@ -37,6 +54,10 @@
                 font-size: 40px;
                 letter-spacing: 3px;
                 text-align: center;
+
+                @include mobile{
+                    font-size: 30px;
+                }
             }
 
             .buttons{
@@ -46,6 +67,12 @@
                 gap: 30px;
                 z-index: 1;
                 margin-top: 40px;
+
+
+                @include small-mobile{
+                    flex-direction: column;
+                }
+
         
         
                 .button{
@@ -79,45 +106,45 @@
         font-weight: bold;
     }
 
-    .imageContainer{
-        height: 100%;
-        position: absolute;
-        top: 0;
-        right: 100px;
-        display: flex;
-        justify-content: center;
-        align-items: center;
+    // .imageContainer{
+    //     height: 100%;
+    //     position: absolute;
+    //     top: 0;
+    //     right: 100px;
+    //     display: flex;
+    //     justify-content: center;
+    //     align-items: center;
         
 
 
-        img{
-            height: 700px;
-            width: 450px;
-            // box-shadow: 0 0 0 8px rgba(255, 255, 255, 0.1);
-            // order: 1;
-            // animation: profile_animate 15s ease-in-out infinite 1s;
-        }
+    //     img{
+    //         height: 700px;
+    //         width: 450px;
+    //         box-shadow: 0 0 0 8px rgba(255, 255, 255, 0.1);
+    //         order: 1;
+    //         animation: profile_animate 15s ease-in-out infinite 1s;
+    //     }
 
-        // @keyframes profile_animate{
-        //     0%{
-        //         border-radius: 40% 80% 50% 80%/40% 80% 50% 80%;
-        //     }
+    //     @keyframes profile_animate{
+    //         0%{
+    //             border-radius: 40% 80% 50% 80%/40% 80% 50% 80%;
+    //         }
           
-        //     25%{
-        //         border-radius: 50% 40% 70% 20%/50% 40% 50% 20%;
-        //     }
+    //         25%{
+    //             border-radius: 50% 40% 70% 20%/50% 40% 50% 20%;
+    //         }
 
-        //     50%{
-        //         border-radius: 40% 50% 90% 30%/40% 80% 40% 80%;
-        //     }
+    //         50%{
+    //             border-radius: 40% 50% 90% 30%/40% 80% 40% 80%;
+    //         }
 
-        //     75%{
-        //         border-radius: 50% 70% 30% 60%/50% 40% 80% 50%;
-        //     }
+    //         75%{
+    //             border-radius: 50% 70% 30% 60%/50% 40% 80% 50%;
+    //         }
 
-        //     100%{
-        //         border-radius: 40% 80% 50% 80%/40% 80% 50% 80%;
-        //     }
-        // }
-    }
+    //         100%{
+    //             border-radius: 40% 80% 50% 80%/40% 80% 50% 80%;
+    //         }
+    //     }
+    // }
 }
