--- a/src/components/portfolio/portfolio.scss
+++ b/src/components/portfolio/portfolio.scss
@@ -1,6 +1,16 @@
+@import "../../App.scss";
+
+
+
 .portfolio {
   position: relative;
   background: #081b29;
+  padding: 0 50px;
+
+  @include mobile{
+    padding: 0 20px 50px 20px;
+    
+  }
  
 
   .progress {
@@ -11,9 +21,16 @@
     text-align: center;
     color: #ffd104;
 
+
     h1 {
       font-size: 60px;
       font-weight: 600;
+  
+
+      @include mobile{
+        font-size: 40px;
+      }
+
     }
 
     .progressBar {
@@ -27,6 +44,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    
   }
 
 
@@ -34,7 +52,6 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    height: 100%;
     width: 100%;
     overflow: hidden;
     
@@ -42,23 +59,38 @@
 
     .wrapper {
       max-width: 1366px;
-      height: 100%;
       margin: auto;
       display: flex;
       align-items: center;
       justify-content: center;
       gap: 50px;
+    
+
+
+      @include tablet{
+        width: 100%;
+        
+      }
+
+      @include mobile{
+        flex-direction: column;
+        text-align: center;
+      }
       
 
       .imageContainer {
         flex: 1;
-        height: 30rem;
         width: 50rem;
+      
+
+        @include mobile{
+          width: 100%;
+        }
         
 
         img {
           width: 100%;
-          height: 100%;
+          height: 400px;
           object-fit: cover;
         }
       }
@@ -69,10 +101,26 @@
         flex-direction: column;
         gap: 30px;
         height: 100%;
+        text-align: center;
+
+        @include tablet{
+          text-align: center;
+          
+        }
+
+        @include mobile{
+          transform: none !important;
+        }
+
+        
 
 
         h2{
             font-size: 50px;
+
+            @include mobile{
+              font-size: 30px;
+            }
         }
         
 
@@ -83,13 +131,17 @@
 
         button{
             width: 250px;
-            background: none;
             border: 1px solid #ffd104;
+            background: none;
             padding: 10px;
             font-size: 20px;
             border-radius: 8px;
             color: #ffd104;
             cursor: pointer;
+            margin: auto;
+
+
+           
         }
         button:hover{
             border: 1px solid #fff;
