--- a/src/components/sidebar/sidebar.scss
+++ b/src/components/sidebar/sidebar.scss
@@ -1,3 +1,6 @@
+@import "../../App.scss";
+
+
 .sidebar{
     display: flex;
     flex-direction: column;
@@ -11,6 +14,12 @@
         bottom: 0;
         width: 400px;
         background-color: #ffd000;
+        height: 100vh;
+        
+
+        @include mobile{
+            width: 200px;
+        }
 
         .links{
             position: absolute;
@@ -27,7 +36,11 @@
                 font-size: 30px;
                 text-decoration: none;
                 color: rgb(51, 51, 51);
-                font-weight: 800
+                font-weight: 800;
+
+                @include mobile{
+                    font-size: 20px;
+                }
             }
         }
     }
