[In progress] skill section update

--- a/src/components/skills/skills.scss
+++ b/src/components/skills/skills.scss
@@ -1,4 +1,32 @@
 .skills-container{
     // background: linear-gradient(#122E43, #07131C);
-    
+    margin: 4rem;
+    position: relative; 
+
+
+    h5{
+        font-size: 60px;
+        font-weight: 600;
+        margin-bottom: 3.5rem;
+    }
+
+
+    .skills-content{
+        display: flex;
+        align-items: flex-start;
+        gap: 3rem;
+
+
+
+        .skills{
+            flex: 1;
+            display: grid;
+            gap: 3rem;
+            grid-template-columns: repeat(2, 1fr);
+        }
+
+        .skills-info{
+            flex: 1;
+        }
+    }
 }
