--- a/src/components/about/about.scss
+++ b/src/components/about/about.scss
@@ -21,11 +21,15 @@
         .header{
             font-size: 60px;
             font-weight: 600;
-            margin-bottom: 50px;
+            margin-bottom: 100px;
 
             span{
                 color: #ffd104
             }
+
+            @include mobile{
+                font-size: 40px;
+              }
         }
 
         img{
@@ -60,6 +64,11 @@
         h1{
             margin-bottom: 20px;
             font-size: 40px;
+            text-align: center;
+
+            @include mobile{
+                font-size: 30px;
+              }
         }
 
         p{
