--- a/src/components/skills/skillCard/skillCard.scss
+++ b/src/components/skills/skillCard/skillCard.scss
@@ -1,13 +1,15 @@
 .skills-card{
     border-radius: .65rem;
-    border: 1.5px solid #6852ba;
-    padding: 2.5rem;
+    background: linear-gradient(180deg, #081b29 0%, #036685 100%);
+    height: 10rem;
     text-align: center;
-    background: rgba(22, 17, 47, 0.398);
     backdrop-filter: blur;
     position: relative;
     cursor: pointer;
     transition: all 0.3s ease;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     
 
 
@@ -17,9 +19,9 @@
         display: flex;
         align-items: center;
         justify-content: center;
-        background: #2a2252;
+        background: #132c41;
         border-radius: 0.65rem;
-        border: 1.5px solid #6852ba;
+        border: 1.5px solid white;
         position: absolute;
         top: -1rem;
         left: -1rem;
@@ -28,8 +30,8 @@
        
 
         img{
-            width: 2.4rem;
-            height: auto;
+            width: 100%;
+            padding: 0.5rem;
             object-fit: contain;
         }
     }
@@ -43,5 +45,8 @@
 
 .skills-card:hover,
 .skills-card:active{
-    background: linear-gradient(180deg, #aa94fe 0%,#7c5fe6 100%);
+    background: linear-gradient(180deg, #ffd104 0%,#141100 100%);
+    scale: 1.1;
+    rotate: -5deg;
+    border: none;
 }
