--- a/src/components/skills/skillsInfoCard/skillsInfoCard.scss
+++ b/src/components/skills/skillsInfoCard/skillsInfoCard.scss
@@ -1,7 +1,11 @@
+@import "../../../App.scss";
+
+
 .skills-info-card{
     min-height: 30rem;
     border-radius: 0.65rem;
     background: linear-gradient(180deg, #081b29 0%, #036685 100%);
+    
    
 
 
@@ -10,6 +14,11 @@
         font-weight: 500;
         padding: 1.5rem 2rem;
         border-bottom: 1.5px solid #fff;
+
+
+        @include mobile{
+            font-size: 25px;
+        }
     }
 
 
@@ -26,6 +35,10 @@
             p{
                 font-size: 20px;
                 font-weight: 500;
+
+                @include mobile{
+                    font-size: 1.2rem;
+                }
             }
 
             .percentage{
@@ -39,13 +52,12 @@
             background: #fff;
             border-radius: 0.65rem;
             margin: 1rem 0 2rem 0;
-            overflow: hidden;
+           
 
 
             .skill-progress{
-                width: 0%;
                 height: 0.5rem;
-                background: linear-gradient(90deg, #f8f8f8 0%,#7b57ff 100%);
+                background: linear-gradient(90deg, #0080a3 0%,#00c3ff 100%);
                 border-radius: 0.5rem;
                 transition: all 0.5s ease-in-out;
             }
