education section added and other sections updated

--- a/src/components/hero/hero.scss
+++ b/src/components/hero/hero.scss
@@ -4,7 +4,7 @@
 .hero{
     height: 100vh;
     // background: linear-gradient(180deg, #0c0c1d, #111132);
-    background: #081B29;
+    background: #081b29;
     overflow: hidden;
     position: relative;
    
