--- a/src/components/contact/contact.scss
+++ b/src/components/contact/contact.scss
@@ -25,8 +25,12 @@
     gap: 40px;
 
     h1 {
-      font-size: 70px;
-      line-height: 80px;
+      font-size: 60px;
+      line-height: 50px;
+
+      span{
+        color:#ffd104; 
+      }
 
       @include tablet{
         font-size: 50px;
@@ -36,10 +40,6 @@
         font-size: 40px;
       }
 
-    }
-
-    span {
-      font-weight: 300;
     }
   }
 
@@ -62,11 +62,13 @@
         z-index: -1;
         text-align: center;
         width: 100%;
+    
 
 
         svg{
           height: 450px;
           width: 450px;
+
 
 
           @include tablet{
@@ -78,6 +80,12 @@
             height: 300px;
             width: 300px;
           }
+
+          @include small-mobile{
+            height: 200px;
+            width: 200px;
+          }
+
 
         }
     }
