--- a/src/components/about/about.scss
+++ b/src/components/about/about.scss
@@ -75,6 +75,11 @@
             color: gray;
             text-align: center;
             font-size: 20px;
+
+
+            @include mobile{
+                text-align: justify;
+            }
         }
     }
     
