--- a/src/components/hero/hero.scss
+++ b/src/components/hero/hero.scss
@@ -80,7 +80,7 @@
                     border-radius: 8px;
                     width: 250px;
                     text-align: center;
-                    padding: 10px;
+                    padding: 12px 10px;
                     text-decoration: none;
                     color: #ffd104;
                     font-size: 20px;
