--- a/src/components/portfolio/portfolio.scss
+++ b/src/components/portfolio/portfolio.scss
@@ -6,6 +6,7 @@
   position: relative;
   background: #081b29;
   padding: 0 50px;
+  
 
   @include mobile{
     padding: 0 20px 50px 20px;
@@ -19,12 +20,16 @@
     left: 0;
     padding-top: 30px;
     text-align: center;
+
+    
+    
     
 
 
     h1 {
       font-size: 60px;
       font-weight: 600;
+    
 
       span{
         color: #ffd104;
@@ -48,6 +53,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    min-height: calc(100vh - 150px);
     
   }
 
@@ -58,16 +64,18 @@
     justify-content: center;
     width: 100%;
     overflow: hidden;
+  
     
    
 
     .wrapper {
-      max-width: 1366px;
+      min-width: 90%;
       margin: auto;
       display: flex;
       align-items: center;
       justify-content: center;
       gap: 50px;
+     
     
 
 
@@ -84,7 +92,8 @@
 
       .imageContainer {
         flex: 1;
-        width: 50rem;
+        text-align: center;
+       
       
 
         @include mobile{
@@ -93,9 +102,11 @@
         
 
         img {
-          width: 100%;
-          height: 400px;
+          width: 600px;
+          height: 600px;
           object-fit: cover;
+          background-position: center;
+          border-radius: 5px;
         }
       }
 
@@ -106,6 +117,8 @@
         gap: 30px;
         height: 100%;
         text-align: center;
+       
+       
 
         @include tablet{
           text-align: center;
@@ -137,12 +150,13 @@
             width: 250px;
             border: 1px solid #ffd104;
             background: none;
-            padding: 10px;
+            padding: 12px 10px;
             font-size: 20px;
             border-radius: 8px;
             color: #ffd104;
             cursor: pointer;
             margin: auto;
+            
 
 
            
