--- a/src/components/portfolio/portfolio.scss
+++ b/src/components/portfolio/portfolio.scss
@@ -20,7 +20,7 @@
     left: 0;
     padding-top: 30px;
     text-align: center;
-
+   
     
     
     
@@ -36,10 +36,14 @@
       }
   
 
+      @include tablet{
+        font-size: 50px;
+      }
+
+
       @include mobile{
         font-size: 40px;
       }
-
     }
 
     .progressBar {
@@ -63,6 +67,7 @@
     align-items: center;
     justify-content: center;
     width: 100%;
+    height: 100%;
     overflow: hidden;
   
     
@@ -70,6 +75,7 @@
 
     .wrapper {
       min-width: 90%;
+      height: 100%;
       margin: auto;
       display: flex;
       align-items: center;
@@ -81,6 +87,7 @@
 
       @include tablet{
         width: 100%;
+        gap: 0;
         
       }
 
@@ -92,21 +99,33 @@
 
       .imageContainer {
         flex: 1;
+        height: 100%;
+        width: 100%;
         text-align: center;
-       
-      
+        position: relative;
 
         @include mobile{
+          width: 60%;
+        }
+
+        @include small-mobile{
           width: 100%;
         }
         
+       
+        
 
         img {
-          width: 600px;
-          height: 600px;
+          width: 90%;
+          height: 100%;
           object-fit: cover;
           background-position: center;
           border-radius: 5px;
+
+
+          @include mobile{
+            width: 100%;
+          }
         }
       }
 
@@ -117,6 +136,7 @@
         gap: 30px;
         height: 100%;
         text-align: center;
+     
        
        
 
@@ -134,6 +154,10 @@
 
         h2{
             font-size: 50px;
+
+            @include tablet{
+              font-size: 40px;
+            }
 
             @include mobile{
               font-size: 30px;
