--- a/src/components/portfolio/portfolio.scss
+++ b/src/components/portfolio/portfolio.scss
@@ -99,10 +99,11 @@
 
       .imageContainer {
         flex: 1;
-        height: 100%;
-        width: 100%;
+        height: 500px;
+        width: 500px;
         text-align: center;
         position: relative;
+        overflow: hidden;
 
         @include mobile{
           width: 60%;
@@ -116,8 +117,7 @@
         
 
         img {
-          width: 90%;
-          height: 100%;
+   
           object-fit: cover;
           background-position: center;
           border-radius: 5px;
@@ -135,7 +135,7 @@
         flex-direction: column;
         gap: 30px;
         height: 100%;
-        text-align: center;
+        
      
        
        
@@ -179,9 +179,12 @@
             border-radius: 8px;
             color: #ffd104;
             cursor: pointer;
-            margin: auto;
+    
             
 
+            @include tablet{
+              margin: auto;   
+            }
 
            
         }
