--- a/src/components/portfolio/portfolio.scss
+++ b/src/components/portfolio/portfolio.scss
@@ -117,7 +117,8 @@
         
 
         img {
-   
+          width: 100%;
+          height: 100%;
           object-fit: cover;
           background-position: center;
           border-radius: 5px;
