--- a/src/components/portfolio/projectDetails/projectDetails.scss
+++ b/src/components/portfolio/projectDetails/projectDetails.scss
@@ -1,12 +1,37 @@
+@import "../../../App.scss";
+
+
 .blog-container {
     padding: 20px;
 
     .image-container {
         max-width: 100%; 
-        height: 800px;
+        height: 70vh;
         display: grid;
         grid-template-columns: 2fr 1fr 1fr 1fr;
         gap: 10px;
+
+
+        @include desktop{
+            height: 60vh;
+        }
+
+        @include tablet{
+            height: 50vh;
+        }
+
+        @include mobile{
+            height: 100vh;
+            grid-template-columns: 1fr 1fr;
+        }
+
+        @include small-mobile{
+            grid-template-columns: 1fr;
+            height: 150vh;
+        }
+
+
+
 
         .img {
             overflow: auto;
@@ -23,5 +48,40 @@
             width: 100%;
             object-fit: cover; 
         }
+    }
+
+
+    .text-container{
+        margin-top: 100px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        text-align: center;
+
+
+        .key-features{
+
+            h1{
+                font-size: 60px;
+                font-weight: 600;
+                margin-bottom: 50px;
+
+
+                span{
+                    color: #ffd104
+                }
+            }
+
+            p{
+                font-size: 20px;
+                line-height: 35px;
+                color: #a0a0a0;
+
+                span{
+                    color: #ffd104
+                }
+            }
+        }
+
     }
 }
