--- a/src/components/portfolio/projectDetails/projectDetails.scss
+++ b/src/components/portfolio/projectDetails/projectDetails.scss
@@ -6,47 +6,19 @@
 
     .image-container {
         max-width: 100%; 
-        height: 70vh;
         display: grid;
-        grid-template-columns: 2fr 1fr 1fr 1fr;
-        gap: 10px;
-
-
-        @include desktop{
-            height: 60vh;
-        }
-
-        @include tablet{
-            height: 50vh;
-        }
-
-        @include mobile{
-            height: 100vh;
-            grid-template-columns: 1fr 1fr;
-        }
-
-        @include small-mobile{
-            grid-template-columns: 1fr;
-            height: 150vh;
-        }
-
-
-
+        grid-template-columns: 1fr 1fr 1fr;
+        gap: 20px;
 
         .img {
             overflow: auto;
-            box-shadow: 0 0 20px 2px rgba(0, 0, 0, 0.1);
-        }
-
-        .bind-image{
-            display: flex;
-            flex-direction: column;
-            gap: 10px;
+            box-shadow: 0 0 20px 2px rgba(0, 0, 0, .5);
+            height: 60vh;
         }
 
         img {
+            object-fit: cover;
             width: 100%;
-            object-fit: cover; 
         }
     }
 
