--- a/src/components/portfolio/projectDetails/projectDetails.scss
+++ b/src/components/portfolio/projectDetails/projectDetails.scss
@@ -29,9 +29,35 @@
         justify-content: center;
         align-items: center;
         text-align: center;
+        flex-direction: column;
 
 
         .key-features{
+
+            h1{
+                font-size: 60px;
+                font-weight: 600;
+                margin-bottom: 50px;
+
+
+                span{
+                    color: #ffd104
+                }
+            }
+
+            p{
+                font-size: 20px;
+                line-height: 35px;
+                color: #a0a0a0;
+
+                span{
+                    color: #ffd104
+                }
+            }
+        }
+
+        .challenges{
+            margin-top: 100px;
 
             h1{
                 font-size: 60px;
