--- a/src/components/portfolio/projectDetails/projectDetails.scss
+++ b/src/components/portfolio/projectDetails/projectDetails.scss
@@ -82,5 +82,15 @@
             }
         }
 
+        .live-link{
+            margin-top: 100px;
+            font-size: 20px;
+
+
+            a{
+                color: #8E44AD
+            }
+        }
+
     }
 }
