login email and password add into blog details page

--- a/src/components/portfolio/projectDetails/projectDetails.scss
+++ b/src/components/portfolio/projectDetails/projectDetails.scss
@@ -92,5 +92,15 @@
             }
         }
 
+        .note{
+            margin-top: 20px;
+            font-size: 18px;
+
+
+            span{
+                color: #ffd104
+            }
+        }
+
     }
 }
