--- a/src/components/portfolio/portfolio.scss
+++ b/src/components/portfolio/portfolio.scss
@@ -50,6 +50,7 @@
     .progressBar {
       height: 7px;
       margin: 5px auto;
+      margin-bottom: 100px;
       background-color: #fff;
     }
   }
@@ -59,7 +60,7 @@
     justify-content: center;
     align-items: center;
     min-height: calc(100vh - 150px);
-    
+    margin: 50px 0;
   }
 
 
