--- a/src/components/about/about.scss
+++ b/src/components/about/about.scss
@@ -72,7 +72,7 @@
         }
 
         p{
-            color: gray;
+            color: rgb(163, 163, 163);
             text-align: center;
             font-size: 20px;
         }
