text color change

--- a/src/components/portfolio/projectDetails/projectDetails.scss
+++ b/src/components/portfolio/projectDetails/projectDetails.scss
@@ -49,7 +49,7 @@
             p{
                 font-size: 20px;
                 line-height: 35px;
-                color: #a0a0a0;
+                color: rgb(219, 219, 219);;
 
                 span{
                     color: #ffd104
@@ -74,7 +74,7 @@
             p{
                 font-size: 20px;
                 line-height: 35px;
-                color: #a0a0a0;
+                color: rgb(219, 219, 219);;
 
                 span{
                     color: #ffd104
