--- a/src/components/portfolio/portfolio.scss
+++ b/src/components/portfolio/portfolio.scss
@@ -169,7 +169,7 @@
         
 
         p{
-            color: gray;
+            color: rgb(219, 219, 219);
             font-size: 20px;
         }
 
